--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -20,6 +20,11 @@
   <script src="//developers.kakao.com/sdk/js/kakao.js"></script>
   <script type="text/javascript" src="https://static.nid.naver.com/js/naverLogin_implicit-1.0.3.js"
     charset="utf-8"></script>
+  <style>
+    .wrap {text-align: left;font-size: 10px; height: 90px;}
+    .wrap * {padding: 0;margin: 0; background-color: #fff;}
+    .wrap .info {border-radius: 5px; background-color: #fff;}
+</style>
 </head>
 
 <body>
