modify mypage css

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -35,6 +35,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>logo.ico" />
+    <!-- 웹사이트로 설정 -->
+    <meta property="og:type" content="website" />
+    <!-- 전체 사이트 이름 -->
+    <meta property="og:site_name" content="OnSikGo" />
+    <!-- 개별 사이트 이름 -->
+    <meta property="og:title" content="OnSikGo" />
+    <!-- 사이트 설명 -->
+    <meta
+      property="og:description"
+      content="지구를 구하는 마지막 주문, 당일 폐기 예정 음식 정보 공유 사이트입니다."
+    />
+    <!-- 이미지  -->
+    <meta
+      property="og:image"
+      content="https://heropy.blog/css/images/logo.png"
+    />
+    <!-- 사이트 url 제공하고 싶은 url을 제공 -->
+    <meta property="og:url" content="https://i7e201.p.ssafy.io/" />
     <title><%= htmlWebpackPlugin.options.title %></title>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Gothic+A1:wght@400;800&family=IBM+Plex+Sans+KR:wght@200;300;400;500&family=Noto+Sans+KR:wght@400;700;900&display=swap");
