update og image url

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -47,7 +47,7 @@
       content="지구를 구하는 마지막 주문, 당일 폐기 예정 음식 정보 공유 사이트입니다."
     />
     <!-- 이미지  -->
-    <meta property="og:image" content="https://onsikgo.s3.ap-northeast-2.amazonaws.com/icon/real_logo.png" />
+    <meta property="og:image:secure_url" content="https://onsikgo.s3.ap-northeast-2.amazonaws.com/icon/real_logo.png" />
     <!-- 사이트 url 제공하고 싶은 url을 제공 -->
     <meta property="og:url" content="https://i7e201.p.ssafy.io/" />
     <title><%= htmlWebpackPlugin.options.title %></title>
