--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -67,6 +67,15 @@
         border-radius: 5px;
         background-color: #fff;
       }
+      ::-webkit-scrollbar {
+        width: 10px;
+      }
+      ::-webkit-scrollbar-track {
+        background-color: rgba(140, 184, 131, 0.4);
+      }
+      /* ::-webkit-scrollbar-thumb {
+        box-shadow: inset 0 0 6px rgb(140, 184, 131, 0.4);
+      } */
     </style>
   </head>
 
