--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -32,6 +32,11 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Gothic+A1:wght@400;800&family=IBM+Plex+Sans+KR:wght@200;300;400;500&family=Noto+Sans+KR:wght@400;700;900&display=swap");
+      .customoverlay {position:relative;bottom:65px;border-radius:6px;border: 1px solid #ccc;border-bottom:2px solid #ddd;float:left;}
+      .customoverlay:nth-of-type(n) {border:0; box-shadow:0px 1px 2px #888;}
+      .customoverlay a {display:block;text-decoration:none;color:#000;text-align:center;border-radius:6px;font-size:14px;font-weight:bold;overflow:hidden;background: #d95050;background: #d95050 url(https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/arrow_white.png) no-repeat right 14px center;}
+      .customoverlay .title {display:block;text-align:center;background:#fff;margin-right:35px;padding:10px 15px;font-size:10px;font-weight:bold;}
+      .customoverlay:after {content:'';position:absolute;margin-left:-12px;left:50%;bottom:-12px;width:22px;height:12px;background:url('https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/vertex_white.png')}
     </style>
     <link
       rel="stylesheet"
