--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -70,18 +70,7 @@
       src="https://static.nid.naver.com/js/naverLogin_implicit-1.0.3.js"
       charset="utf-8"
     ></script>
-    <script
-      src="https://cdn.onesignal.com/sdks/OneSignalSDK.js"
-      async=""
-    ></script>
-    <script>
-      window.OneSignal = window.OneSignal || [];
-      OneSignal.push(function () {
-        OneSignal.init({
-          appId: "2133650c-a9eb-4010-907d-aba7f74986f9",
-        });
-      });
-    </script>
+
     <script type="text/javascript">
       var userAgent = navigator.userAgent.toLowerCase();
       if (userAgent.match("iphone")) {
@@ -102,6 +91,7 @@
         );
       }
     </script>
+    <script src="js/chatBot.js"></script>
     <style>
       .wrap {
         text-align: left;
